2006-01-17  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: added pixels-to-microns conversion factor to accomodate more than one objective/multiplier.

2006-01-12  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: now writes the final MSD data structure to a tab-delimited file.
	* rod_msd.m: same. also added recording of diffusion constants in the output structure.
	* rod.ve.m: added comments.

2005-12-08  Jeremy Cribb <jcribb@email.unc.edu>
	* rod_msd.m: added. computes the mean square displacement vs. a time-window for a diffusing rod.
	* rod_ve.m: added. computes complex modulus and viscosity for a diffusing rod, using output from rod_msd.m.

2005-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: updated documentation.  added number of beads tracked to output.

2005-10-05  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: rearranged output data structure such that each bead's data is stored in 'raw', the mean values in 'mean', and the standard error values in 'error'.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: fixed a warning regarding the use of the variable 'gamma' which is also a function in matlab.

2005-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: corrected documentation to read default filemask is '*.evt.mat'.

2005-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: vectorized innermost for-loop so that msd runs more quickly.

2005-06-30  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: added.  Reimplemented algorithm for computing mean-square displacement as found in Mason's 2000 Rheol Acta paper.  Mostly done for better understanding of the algorithm, but placed here as it works cleanly with the new version of load_video_tracking.
	* ve.m: added.  Uses output of msd.m to compute, output, and plot the viscoelastic moduli (as determined by mean-square displacement computation).

2005-06-27  David Hill <dbhill@email.unc.edu>
	* batch_msd_2d.m: changed to function from script.
	* msd_2d.m: changed to function from script.
